--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div> class = "container">
-        <!-- El contenido ira aqui-->
-
-    </div>
+    <div class = "container"> </div>
+    <div class = "logo">NETFLIX</div>
 </body>
 </html>
