Contenedor de perfiles

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
     <div class = "container"> </div>
     <div class = "logo">NETFLIX</div>
+    <h1 class="titulo">¿Quién está viendo ahora?</h1>
+
+    <div class="perfiles"> perfiles</div>
+    <!-- Los Perfiles Iran Aquí-->
+
 </body>
 </html>
