Inserción de primer perfil con imagen

--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <div class = "logo">NETFLIX</div>
     <h1 class="titulo">¿Quién está viendo ahora?</h1>
 
-    <div class="perfiles"> perfiles</div>
-    <!-- Los Perfiles Iran Aquí-->
+    <div class="perfiles">
+        <div class="perfil">
+            <div class="avatar">
+                <img src="https://i.pinimg.com/1200x/b4/0b/51/b40b51418293936a6e0ad09ffa229cb7.jpg" alt="Perfil 1">
+            </div>
+            <p>Perfil 1</p>
+        </div>
+    </div>
 
 </body>
 </html>
