--- a/index.html
+++ b/index.html
@@ -12,9 +12,32 @@
     <div class="perfiles">
         <div class="perfil">
             <div class="avatar">
-                <img src="https://i.pinimg.com/1200x/b4/0b/51/b40b51418293936a6e0ad09ffa229cb7.jpg" alt="Perfil 1">
+                <img src="https://wallpapers.com/images/featured/netflix-profile-pictures-w3lqr61qe57e9yt8.jpg" alt="Perfil 1">
             </div>
             <p>Perfil 1</p>
+        </div>
+
+
+        <div class="perfil">
+            <div class="avatar">
+                <img src="https://wallpapers.com/images/high/netflix-profile-pictures-1000-x-1000-2fg93funipvqfs9i.webp" alt="Perfil 2">
+            </div>
+            <p>Perfil 2</p>
+        </div>       
+
+        <div class="perfil">
+            <div class="avatar">
+                <img src="https://i.pinimg.com/736x/92/b4/e7/92b4e7c57de1b5e1e8c5e883fd915450.jpg" alt="Perfil 3">
+            </div>
+            <p>Perfil 3</p>
+        </div>
+        
+        
+        <div class="perfil">
+            <div class="avatar">
+                <img src="https://i.pinimg.com/564x/a4/c6/5f/a4c65f709d4c0cb1b4329c12beb9cd78.jpg" alt="Perfil 4">
+            </div>
+            <p>Perfil 4</p>
         </div>
     </div>
 
