Creación De Boton Agregar Otro Perfil

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div class = "container"> </div>
-    <div class = "logo">NETFLIX</div>
-    <h1 class="titulo">¿Quién está viendo ahora?</h1>
+        <a href="https://www.netflix.com" class="logo">NETFLIX</a>
+        <h1 class="titulo">¿Quién está viendo ahora?</h1>
 
     <div class="perfiles">
         <div class="perfil">
@@ -39,7 +39,18 @@
             </div>
             <p>Perfil 4</p>
         </div>
+
+
+
+        <div class="perfil">
+            <a href="#" class="avatar agregar-perfil">
+                <span class="mas">+</span>
+            </a>
+            <p>Agregar Perfil</p>
+        </div>
+
     </div>
+
 
 </body>
 </html>
