Boton Administrar Perfiles y Diseños Nuevos De Fuentes

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <p>Agregar Perfil</p>
         </div>
 
+        <div class="boton-container">
+            <button class="boton-admin">Administrar Perfiles</button>
+        </div>
     </div>
 
 
