Mejorando Espaciado y Titulos - Entrega Final

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
         <div class="perfil">
-            <a href="#" class="avatar agregar-perfil">
+            <a href="https://www.netflix.com" class="avatar agregar-perfil">
                 <span class="mas">+</span>
             </a>
             <p>Agregar Perfil</p>
